# signal-bot-crawly

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  rust.yml
src/: base64.rs  config.rs  crypto.rs  http.rs  json.rs  main.rs  memory.rs  ollama.rs  scheduler.rs  signal.rs  store.rs  webui.rs
tests/: integration.rs
